--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello World</title>
+    <title>Hello Worldddd</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -17,7 +17,7 @@
     </style>
 </head>
 <body>
-    <h1>Hello, World! 🌍</h1>
+    <h1>Hello, Worldd! 🌍</h1>
     <p>Welcome to my first Cloudflare Pages website!</p>
 </body>
 </html>
