--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </style>
 </head>
 <body>
-    <h1>Hello, Worldd! 🌍</h1>
-    <p>Welcome to my first Cloudflare Pages website!</p>
+    <h1>Hello, Worlodod! 🌍</h1>
+    <p>Welcome to my first Cloudflare Pagoes website!</p>
 </body>
 </html>
